# CruxMD

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Makefile  README.md  cruxmd-v2-plan.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02debf75f518_initial_fhir_resources.py  51aca4ea95b6_add_description_to_task_projections.py  67aaaaa896ae_add_session_name_field.py  92f1b9d238fa_add_index_on_session_last_active_at.py  a2f3b4c5d6e7_add_profile_column_to_fhir_resources.py  add_better_auth_tables.py  add_compiled_summary_columns.py  add_embedding_columns.py  add_fhir_id_type_index.py  add_session_model.py  add_task_model.py  add_user_profiles.py  fhir_projection_system.py  remove_paused_status.py  simplify_session_model.py
backend/app/: __init__.py  auth.py  config.py  constants.py  database.py  main.py  models.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_agent_schemas.py  test_agent_tools.py  test_api.py  test_auth.py  test_chart_builder.py  test_chat.py  test_compiler.py  test_context_engine.py  test_context_schemas.py  test_data.py  test_database.py  test_embeddings.py  test_fhir.py  test_fhir_helpers.py  test_fhir_loader.py  test_fixtures.py  test_graph.py  test_health.py  test_labs.py  test_patients.py  test_projections.py  test_query_classifier.py  test_query_parser.py  test_quick_actions.py  test_reference_ranges.py  test_seed_database.py  test_sessions.py  test_tasks.py  test_vector_search.py
(+228 files in other folders)
