[project]
name = "cruxmd"
version = "0.1.0"
description = "Medical Context Engine - LLM-native platform for clinical intelligence"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = []
